--- a/_posts/2014-03-07-demo-post.md
+++ b/_posts/2014-03-07-demo-post.md
@@ -10,7 +10,7 @@ Ref:
 - [markdown syntax](http://daringfireball.net/projects/markdown/syntax)
 - [markdown basics](http://daringfireball.net/projects/markdown/basics)
 - [github flavored markdown (GFM)](https://help.github.com/articles/github-flavored-markdown/)
-
+- [another cheatsheet -github_style](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
 # Header1
 ## Header2
 #### Header3
@@ -86,9 +86,9 @@ sit amet, consectetuer adipiscing elit.
 
 **Code**
 
-[Find more languages here](http://pygments.org/docs/lexers/)
+[Find more languages click here](http://pygments.org/docs/lexers/)
 
-```c
+```c linenos
 void func()
 {
   if (this==that)
@@ -124,6 +124,24 @@ puts markdown.to_html
 ```text
 this is flat test...
 ```
+
+{% highlight c linenos=table %}
+void func()
+{
+  if (this==that)
+    done=true;
+  return done;
+}
+{% endhighlight %}
+
+{% highlight c linenos %}
+void func()
+{
+  if (this==that)
+    done=true;
+  return done;
+}
+{% endhighlight %}
 
 **Chars needing escape**
 
