tweaking theme for sorting bunch of posts

--- a/_posts/2015-03-24-demo-post.md
+++ b/_posts/2015-03-24-demo-post.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Demo post
-category: programming
-tags: [github, github-pages, jekyll]
+category: [samples]
+tags: [style, jekyll]
 ---
 
 Ref:
