--- a/_posts/2015-03-24-demo-post.md
+++ b/_posts/2015-03-24-demo-post.md
@@ -9,8 +9,9 @@ Ref:
 
 - [markdown syntax](http://daringfireball.net/projects/markdown/syntax)
 - [markdown basics](http://daringfireball.net/projects/markdown/basics)
-- [github flavored markdown (GFM)](https://help.github.com/articles/github-flavored-markdown/)
-- [another cheatsheet -github_style](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+- github flavored markdown (GFM): https://help.github.com/articles/github-flavored-markdown/
+- another cheatsheet -github_style: https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet
+- another one: http://assemble.io/docs/Cheatsheet-Markdown.html
 
 # Header1
 
