fixing tags/cats fixing date timezones

--- a/_posts/2015-04-01-linode.md
+++ b/_posts/2015-04-01-linode.md
@@ -2,7 +2,7 @@
 layout: post
 title: Linode - My favorite VPS service
 categories: [sysadmin]
-tags: [VPS, Cloud, Linode]
+tags: [VPS, cloud, linode]
 date: 2015-04-01 22:42:36-04:00
 ---
 
